# chronofile

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  LICENSE-APACHE  LICENSE-MIT  README.md  cliff.toml  spec.md
.github/ISSUE_TEMPLATE/: dependency-issues.md  fs-changes.md
.github/workflows/: audit.yml  check-std-fs-file-changes.yml  ci.yml  rust.yml
src/: chrono_file.rs  lib.rs  patches.rs  utils.rs  versions.rs
src/core/: compression.rs  diff.rs
tests/: integration.rs  test_chrono.rs
